update software processing

--- a/ProcessingSoftware/config.ini
+++ b/ProcessingSoftware/config.ini
@@ -6,10 +6,13 @@ label_df_name = label
 [Preprocessing]
 multi_label = False
 is_remove_np = False
-stopword_path = _internal/stopwords_project.txt
+stopword_path = stopwords_project.txt
 required_columns = Loại văn bản; Số ký hiệu văn bản; Ngày ban hành; Cơ quan ban hành; Trích yếu
 input_column_name = Trích yếu
 label_column_name = ID phòng xử lý
+using_k_means = False
+k = 10
+count_data_per_label = 2000
 
 [Vectorization]
 data_vector_file_name = vector_data.csv
