update software processing

--- a/ProcessingSoftware/config.ini
+++ b/ProcessingSoftware/config.ini
@@ -4,7 +4,7 @@ input_df_name = input
 label_df_name = label
 
 [Preprocessing]
-multi_label = False
+remove_duplicated = True
 is_remove_np = False
 stopword_path = stopwords_project.txt
 required_columns = Loại văn bản; Số ký hiệu văn bản; Ngày ban hành; Cơ quan ban hành; Trích yếu
@@ -17,7 +17,7 @@ count_data_per_label = 2000
 [Vectorization]
 data_vector_file_name = vector_data.csv
 vectorizer_file_name = tfidf.model
-min_tf = 3
+min_tf = 4
 
 [SVM]
 svm_file_name = svm.model
@@ -25,3 +25,4 @@ C=1
 kernel = rbf
 gamma = scale
 probability = True
+test_size = 0.2
